--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma-generate": "prisma generate",
+    "postinstall": "prisma generate",
+    "db-push": "npx prisma db push",
+    "prisma-format": "npx prisma format"
   },
   "dependencies": {
+    "@prisma/client": "^5.7.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.302.0",
     "next": "14.0.4",
+    "prisma": "^5.7.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.0",
