--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tanstack/react-query": "^5.15.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "lodash.kebabcase": "^4.1.1",
     "lucide-react": "^0.302.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
@@ -38,6 +39,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/lodash.kebabcase": "^4.1.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
