add calendar in AddRecord

--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@tanstack/react-query": "^5.15.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^3.0.6",
     "lodash.kebabcase": "^4.1.1",
     "lucide-react": "^0.302.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "prisma": "^5.7.1",
     "react": "^18",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "tailwind-merge": "^2.2.0",
