--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@playwright/test": "^1.40.1",
     "@types/lodash.kebabcase": "^4.1.9",
     "@types/node": "^20",
     "@types/react": "^18",
